--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,6 @@
-<div class="container ">
+<div>
+  <!-- Header Section -->
+  <%= partial 'partials/header' %>
   <!-- Banner Section -->
   <%= partial 'partials/banner' %>
   <!-- About Section -->
