--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,9 +1,33 @@
 <div class="row my-5">
   <div class="col-12">
-    <div class="container">
-      <div id="about">
-        <h2>About</h2>
-        <p>I'm ....</p>
+    <div class="post">
+      <div class="parag">
+        <div id="about">
+          <h2>About me</h2>
+          <p>Hello, world! I'm a full-stack web developer in Japan! I was born in Aichi in 1997. Hello, I'm Ritsuo, but most people call me Ricky. I'm originally from Aichi prefecture, Japan, and currently, I call Nagoya my home.
+            After graduating from university, I embarked on a unique career path. I spent three years as an English teacher at a high school, helping students learn the intricacies of the language. However, my passion for technology and coding led me to make a bold career change.
+            I took a leap of faith and left my teaching job to pursue a career in the IT industry. To prepare myself for this exciting transition, I joined Le Wagon, a renowned coding bootcamp located in Tokyo. It was an intensive and rewarding experience that opened up a world of opportunities.
+          </p>
+        </div>
+        <div id="like">
+          <h2>What I like</h2>
+          <ul>
+            <li>Travelling🧳</li>
+            <li>Handball🤾‍♂️</li>
+            <li>Owarai(japanese comedy)🕺</li>
+            <li>Listening to music(especially J-Hip Hop)😎</li>
+            <li>Seeing lowest reviews on Google map📍</li>
+          </ul>
+        </div>
+        <div id="dislike">
+          <h2>What I don't like</h2>
+          <ul>
+            <li>TravellingTravelling🧳</li>
+            <li>Handball🤾‍♂️</li>
+            <li>Owarai(japanese comedy)🕺</li>
+            <li>Listening to music(especially J-Hip Hop)😎</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
