--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -23,3 +23,33 @@
     </div>
   </div>
 </div>
+<section class="feature-v6 cd-padding-y-xl">
+  <div class="cd-container cd-max-width-adaptive-lg">
+    <div class="feature-v6__grid">
+      <div>
+        <img class="feature-v6__img" src="https://d3ae4wrz2ljkbq.cloudfront.net/components/img-16-9-dark-5.svg" alt="Image description">
+        <h4 class="cd-margin-bottom-2xs">Nothing is cheap</h4>
+        <p class="feature-v6__description cd-margin-bottom-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium assumenda doloribus eos provident modi.</p>
+        <p><a href="#0" class="cd-link">Learn more</a></p>
+      </div>
+      <div>
+        <img class="feature-v6__img" src="https://d3ae4wrz2ljkbq.cloudfront.net/components/img-16-9-dark-5.svg" alt="Image description">
+        <h4 class="cd-margin-bottom-2xs">The quick brown fox jumps over the lazy dog</h4>
+        <p class="feature-v6__description cd-margin-bottom-xs">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam distinctio inventore architecto.</p>
+        <p><a href="#0" class="cd-link">Learn more</a></p>
+      </div>
+      <div>
+        <img class="feature-v6__img" src="https://d3ae4wrz2ljkbq.cloudfront.net/components/img-16-9-dark-5.svg" alt="Image description">
+        <h4 class="cd-margin-bottom-2xs">Welcome to the Web Academy</h4>
+        <p class="feature-v6__description cd-margin-bottom-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium assumenda doloribus eos provident modi.</p>
+        <p><a href="#0" class="cd-link">Learn more</a></p>
+      </div>
+      <div>
+        <img class="feature-v6__img" src="https://d3ae4wrz2ljkbq.cloudfront.net/components/img-16-9-dark-5.svg" alt="Image description">
+        <h4 class="cd-margin-bottom-2xs">Strength does not come from winning</h4>
+        <p class="feature-v6__description cd-margin-bottom-xs">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam distinctio inventore architecto.</p>
+        <p><a href="#0" class="cd-link">Learn more</a></p>
+      </div>
+    </div>
+  </div>
+</section>
