--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -1,55 +1,21 @@
-<div class="row my-5">
-  <div class="col-12">
-    <div class="container">
-      <div id="projects">
-        <h2> Projects</h2>
-        <div class="cards">
-          <% data.projects.each do |project| %>
-            <div class="card-product">
-              <%= image_tag project.image, alt: "project image" %>
-              <div class="card-product-infos w-100">
-                <div class="d-flex justify-content-between align-items-center">
-                  <h2><%= project.name %></h2>
-                  <% link_to project.url, class: 'external-link', target: '_blank' do %>
-                    <i class="fas fa-external-link-alt"></i>
-                  <% end %>
-                </div>
-                <p><%= project.description %></p>
-              </div>
-            </div>
-          <% end %>
-        </div>
+<div id="projects">
+  <h2 class="text-center">Projects</h2>
+  <section class="feature-v6 cd-padding-y-xl">
+    <div class="cd-container cd-max-width-adaptive-lg">
+      <div class="feature-v6__grid">
+        <% data.projects.each do |project| %>
+          <div>
+            <% if project.image.present? %>
+              <%= image_tag project.image, alt: "project image", class: "feature-v6__img" %>
+            <% else %>
+              <%= image_tag "https://d3ae4wrz2ljkbq.cloudfront.net/components/img-16-9-dark-5.svg", alt: "default image", class: "feature-v6__img" %>
+            <% end %>
+            <h4 class="cd-margin-bottom-2xs"><%= project.name %></h4>
+            <p class="feature-v6__description cd-margin-bottom-xs"><%= project.description %></p>
+            <p><a href="<%= project.url %>" class="cd-link", target="_blank">Learn more</a></p>
+          </div>
+        <% end %>
       </div>
     </div>
-  </div>
+  </section>
 </div>
-<section class="feature-v6 cd-padding-y-xl">
-  <div class="cd-container cd-max-width-adaptive-lg">
-    <div class="feature-v6__grid">
-      <div>
-        <img class="feature-v6__img" src="https://d3ae4wrz2ljkbq.cloudfront.net/components/img-16-9-dark-5.svg" alt="Image description">
-        <h4 class="cd-margin-bottom-2xs">Nothing is cheap</h4>
-        <p class="feature-v6__description cd-margin-bottom-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium assumenda doloribus eos provident modi.</p>
-        <p><a href="#0" class="cd-link">Learn more</a></p>
-      </div>
-      <div>
-        <img class="feature-v6__img" src="https://d3ae4wrz2ljkbq.cloudfront.net/components/img-16-9-dark-5.svg" alt="Image description">
-        <h4 class="cd-margin-bottom-2xs">The quick brown fox jumps over the lazy dog</h4>
-        <p class="feature-v6__description cd-margin-bottom-xs">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam distinctio inventore architecto.</p>
-        <p><a href="#0" class="cd-link">Learn more</a></p>
-      </div>
-      <div>
-        <img class="feature-v6__img" src="https://d3ae4wrz2ljkbq.cloudfront.net/components/img-16-9-dark-5.svg" alt="Image description">
-        <h4 class="cd-margin-bottom-2xs">Welcome to the Web Academy</h4>
-        <p class="feature-v6__description cd-margin-bottom-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium assumenda doloribus eos provident modi.</p>
-        <p><a href="#0" class="cd-link">Learn more</a></p>
-      </div>
-      <div>
-        <img class="feature-v6__img" src="https://d3ae4wrz2ljkbq.cloudfront.net/components/img-16-9-dark-5.svg" alt="Image description">
-        <h4 class="cd-margin-bottom-2xs">Strength does not come from winning</h4>
-        <p class="feature-v6__description cd-margin-bottom-xs">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam distinctio inventore architecto.</p>
-        <p><a href="#0" class="cd-link">Learn more</a></p>
-      </div>
-    </div>
-  </div>
-</section>
