--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,10 @@
 <div>
-  <!-- Header Section -->
-  <%= partial 'partials/header' %>
+  <!-- Navbar Section -->
+  <%= partial 'partials/navbar' %>
   <!-- Banner Section -->
   <%= partial 'partials/banner' %>
+  <!-- Header Section -->
+  <%= partial 'partials/header' %>
   <!-- About Section -->
   <%= partial 'partials/about' %>
   <!-- Projects Section -->
