--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,16 +1,25 @@
-<div class="row my-5">
+<div id ="about" class="row my-5" style="padding: 80px;">
   <div class="col-12">
     <div class="post">
       <div class="parag">
-        <div id="about">
+        <div>
           <h2>About me</h2>
-          <p>Hello, world! I'm a full-stack web developer in Japan! I was born in Aichi in 1997. Hello, I'm Ritsuo, but most people call me Ricky. I'm originally from Aichi prefecture, Japan, and currently, I call Nagoya my home.
-            After graduating from university, I embarked on a unique career path. I spent three years as an English teacher at a high school, helping students learn the intricacies of the language. However, my passion for technology and coding led me to make a bold career change.
-            I took a leap of faith and left my teaching job to pursue a career in the IT industry. To prepare myself for this exciting transition, I joined Le Wagon, a renowned coding bootcamp located in Tokyo. It was an intensive and rewarding experience that opened up a world of opportunities.
+          <p>Hello, world! I'm <strong>Ritsuki</strong> and I'm from <strong>🇯🇵Aichi, Japan</strong>.
+            I'm always enthusiastic, I'm also creative and love helping people by solving their problems.
+            <br>
+            <br>
+            After I graduated from university, I worked as an English teacher for three years, but I decided to make a career change to become a full-stack developer and joined in a coding bootcamp called <strong>🗼Le Wagon Tokyo</strong>(9-week intensive coding program).
+            Teaching had its rewards, but I realized that I could help more people by using the power of technology.
+            <br>
+            <br>
+            Now, my goal is to become a programmer who can write code that empathetically caters to each user's needs. I'm excited about the possibilities ahead and
+            how technology can enable me to make a difference in people's lives on a larger scale.
           </p>
         </div>
+        <br>
+        <br>
         <div id="like">
-          <h2>What I like</h2>
+          <h3>What I like</h3>
           <ul>
             <li>Travelling🧳</li>
             <li>Handball🤾‍♂️</li>
@@ -19,8 +28,9 @@
             <li>Seeing lowest reviews on Google map📍</li>
           </ul>
         </div>
+        <br>
         <div id="dislike">
-          <h2>What I don't like</h2>
+          <h3>What I don't like</h3>
           <ul>
             <li>TravellingTravelling🧳</li>
             <li>Handball🤾‍♂️</li>
