--- a/source/partials/social.html.erb
+++ b/source/partials/social.html.erb
@@ -1,20 +1,37 @@
 <div class="row my-5">
   <div class="col-12">
     <div id="contact">
-      <div class="d-flex justify-content-center flex-wrap">
-        <div class="button-social d-flex flex-column justify-content-center align-items-center">
-          <i class="fa-solid fa-envelope"></i>
-          <%= mail_to "ricky0912t@gmail.com", "", class: 'button-social-link' %>
-        </div>
-        <div class="button-social d-flex flex-column justify-content-center align-items-center">
-          <i class="fa-brands fa-github"></i>
-          <%= link_to "", "https://github.com/Ritsuki-Toshima", target: '_blank', class: 'button-social-link' %>
-        </div>
-        <div class="button-social d-flex flex-column justify-content-center align-items-center">
-          <i class="fa-brands fa-linkedin"></i>
-          <%= link_to "", "https://www.linkedin.com/in/ritsuki-toshima/", target: '_blank', class: 'button-social-link' %>
-        </div>
+      <div class="social-container glare-style">
+        <h2>Contact</h2>
+        <ul class="social-icons">
+          <li>
+            <a href="https://www.facebook.com/profile.php?id=100012041112596" class="ic-facebook" , target="_blank">
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/hand0912r/" class="ic-instagram" , target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/ritsuki-toshima/" class="ic-linkedin" , target="_blank">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/Ritsuki-Toshima" class="ic-github" , target="_blank">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a href="mailto:tanaka@gmail.com" class="ic-mail" target="_blank">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
 </div>
+<!-- Glare Effect -->
