--- a/source/stylesheets/components/_header.scss
+++ b/source/stylesheets/components/_header.scss
@@ -6,14 +6,14 @@ body {
   margin: 0px;
 }
 
-header,
-footer {
-  font-family: Raleway;
-  margin: 0 auto;
-  padding: 5em 3em;
-  text-align: center;
-  background: #555;
-}
+// header,
+// footer {
+//   font-family: Raleway;
+//   margin: 0 auto;
+//   padding: 5em 3em;
+//   text-align: center;
+//   background: #555;
+// }
 
 header h1 {
   color: #AAA;
