--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -12,6 +12,24 @@
 }
 
 .post {
-  max-width: 800px;
+  max-width: 720px;
   margin: 0 auto;
+}
+
+
+/* .navbarScroll.navbarDark {
+    background-color: black;
+} */
+
+.nav-link {
+  color: rgb(247, 246, 246);
+}
+
+h2,
+h3 {
+  font-family: Garamond, sans-serif;
+}
+
+.navbar {
+  background-color: #252830;
 }
