--- a/source/partials/header.html.erb
+++ b/source/partials/header.html.erb
@@ -1,7 +1,6 @@
 <div class="nav-bar red topBotomBordersOut">
-  <a>HOME</a>
-  <a>ARTICLES</a>
-  <a>PORTFOLIO</a>
-  <a>ABOUT</a>
-  <a>CONTACT</a>
+  <a href="#home">HOME <i class="fas fa-home"></i></a>
+  <a href="#about">ABOUT ME <i class="fas fa-info-circle"></i></a>
+  <a href="#projects">PROJECT <i class="fas fa-folder-open"></i></a>
+  <a href="#contact">CONTACT <i class="fas fa-envelope"></i></a>
 </div>
