--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,3 +1,16 @@
+<!-- home section start -->
+<section class="home" id="home" style="padding: 80px;">
+  <div class="max-width">
+    <div class="home-content">
+      <div class="text-1">Hello, my name is</div>
+      <div class="text-2">Ritsuki Toshima</div>
+      <div class="text-3">And I'm a <span class="typing"></span></div>
+      <div class="classbox">
+        <a href="#">Hire me</a>
+      </div>
+    </div>
+  </div>
+</section>
 <div class="row justify-content-center banner">
   <div class="col-12 d-flex flex-column justify-content-center align-items-center h-100">
     <%= image_tag 'profile.jpg', alt: "profile photo", class: 'profile-avatar' %>
