--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -1,4 +1,4 @@
-<div id="projects" style="padding: 80px;">
+<div id="projects" style="padding: 80px; background-color: #CDEDFD;">
   <h2 class="text-center">Projects</h2>
   <section class="feature-v6 cd-padding-y-xl">
     <div class="cd-container cd-max-width-adaptive-lg">
@@ -16,8 +16,8 @@
             </div>
             <p class="feature-v6__description cd-margin-bottom-xs"><%= project.description %></p>
             <div class="d-flex">
-              <p class="me-4"><a href="<%= project.url %>" class="cd-link", target="_blank">Website<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-              <p><a href="<%= project.guthub %>" class="cd-link", target="_blank">Github<i class="fa-brands fa-square-github"></i></a></p>
+              <p class="me-4"><a href="<%= project.url %>" class="cd-link btn", target="_blank">Website<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+              <p><a href="<%= project.guthub %>" class="cd-link btn", target="_blank">Github<i class="fa-brands fa-square-github"></i></a></p>
             </div>
           </div>
         <% end %>
