--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,9 +10,25 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   </head>
   <body>
     <%= yield %>
+    <script>
+      var typed = new Typed(".typing", {
+        strings: ["Full-stack web developer", "Ninja", "Dreamer", "Perfect human"],
+        typeSpeed: 100,
+        backSpeed: 60,
+        loop: true
+      });
+
+      var typed3 = new Typed(".typing-3", {
+      strings: ["Connect with me on :)"],
+      typeSpeed: 100,
+      backSpeed: 60,
+      loop: true
+      });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
