--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -23,6 +23,7 @@
           <ul>
             <li>Travelling🧳</li>
             <li>Handball🤾‍♂️</li>
+            <li>Ramen🍜</li>
             <li>Owarai(japanese comedy)🕺</li>
             <li>Listening to music(especially J-Hip Hop)😎</li>
             <li>Seeing lowest reviews on Google map📍</li>
@@ -32,10 +33,8 @@
         <div id="dislike">
           <h3>What I don't like</h3>
           <ul>
-            <li>TravellingTravelling🧳</li>
-            <li>Handball🤾‍♂️</li>
-            <li>Owarai(japanese comedy)🕺</li>
-            <li>Listening to music(especially J-Hip Hop)😎</li>
+            <li>Typo😇</li>
+            <li></li>
           </ul>
         </div>
       </div>
