--- a/source/stylesheets/components/_contact.scss
+++ b/source/stylesheets/components/_contact.scss
@@ -146,3 +146,160 @@
     }
   }
 }
+
+/* footer section styling */
+
+footer {
+  position: relative;
+  width: 100%;
+  background: #3586ff;
+  min-height: 100px;
+  padding: 20px 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+footer h2 {
+  margin-bottom: 12px;
+  color: #fff;
+  font-size: 2em;
+}
+
+#media {
+  position: relative;
+  display: flex;
+  gap: 50px;
+}
+
+#media li {
+  position: relative;
+  list-style: none;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.5s;
+
+
+}
+
+#media li a {
+  position: relative;
+  text-decoration: none;
+  color: var(--clr);
+  z-index: 10;
+  font-size: 2em;
+  transition: 0.5s ease-in-out;
+
+}
+
+#media li:hover {
+  z-index: 100000;
+  transform: scale(0.75);
+  transform: translateY(-10px);
+}
+
+#media li::before {
+  content: '';
+  position: absolute;
+  inset: 30px;
+  box-shadow: 0 0 0 10px var(--clr),
+    0 0 0 20px var(--bg),
+    0 0 0 22px var(--clr);
+  transition: 0.5s;
+}
+
+#media li:hover::before {
+  inset: 0px;
+}
+
+#media li::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: var(--bg);
+  transform: rotate(45deg);
+}
+
+footer p {
+  color: #fff;
+  text-align: center;
+  margin-top: 15px;
+  font-size: 1.1em;
+}
+
+footer p a {
+  text-decoration: none;
+  color: black;
+  font-size: 1em;
+  transition: 0.5s ease-in-out;
+}
+
+footer p a:hover {
+  text-decoration: underline;
+  color: rgb(5, 1, 1);
+  font-size: 1.2em;
+  transform: rotateX(10px);
+}
+
+footer .wave {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("https://ftl.deekshith.eu.org/354310/None?hash=AgADY7");
+  background-size: 1000px 100px;
+}
+
+footer .wave#wave1 {
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animatewave 4s linear infinite;
+}
+
+footer .wave#wave2 {
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animatewave_02 4s linear infinite;
+}
+
+footer .wave#wave3 {
+  z-index: 1000;
+  opacity: 0.2;
+  bottom: 15px;
+  animation: animatewave 3s linear infinite;
+}
+
+footer .wave#wave4 {
+  z-index: 999;
+  opacity: 0.7;
+  bottom: 20px;
+  animation: animatewave_02 3s linear infinite;
+}
+
+@keyframes animatewave {
+  0% {
+    background-position-x: 1000px;
+  }
+
+  100% {
+    background-position-x: 0px;
+  }
+}
+
+@keyframes animatewave_02 {
+  0% {
+    background-position-x: 0px;
+  }
+
+  100% {
+    background-position-x: 1000px;
+  }
+}
