--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,43 +1,60 @@
-<div id ="about" class="row my-5" style="padding: 80px;">
+<div id ="about" class="row" style="padding: 100px;">
   <div class="col-12">
     <div class="post">
+      <div class="row justify-content-center">
+        <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+          <h1 style="font-family: system-ui, sans-serif; font-size: 56px;">Hello, World! I'm Ritsuki!</h1>
+          <div class="circle my-2">
+            <%= image_tag 'profile.jpg', alt: "profile photo", class: 'profile-avatar' %>
+          </div>
+        </div>
+      </div>
       <div class="parag">
         <div>
           <h2>About me</h2>
-          <p>Hello, world! I'm <strong>Ritsuki</strong> and I'm from <strong>🇯🇵Aichi, Japan</strong>.
-            I'm always enthusiastic, I'm also creative and love helping people by solving their problems.
-            <br>
-            <br>
-            After I graduated from university, I worked as an English teacher for three years, but I decided to make a career change to become a full-stack developer and joined in a coding bootcamp called <strong>🗼Le Wagon Tokyo</strong>(9-week intensive coding program).
-            Teaching had its rewards, but I realized that I could help more people by using the power of technology.
-            <br>
-            <br>
-            Now, my goal is to become a programmer who can write code that empathetically caters to each user's needs. I'm excited about the possibilities ahead and
-            how technology can enable me to make a difference in people's lives on a larger scale.
-          </p>
-        </div>
-        <br>
-        <br>
-        <div id="like">
-          <h3>What I like</h3>
-          <ul>
-            <li>Travelling🧳</li>
-            <li>Handball🤾‍♂️</li>
-            <li>Ramen🍜</li>
-            <li>Owarai(japanese comedy)🕺</li>
-            <li>Listening to music(especially J-Hip Hop)😎</li>
-            <li>Seeing lowest reviews on Google map📍</li>
-          </ul>
-        </div>
-        <br>
-        <div id="dislike">
-          <h3>What I don't like</h3>
-          <ul>
-            <li>Typo😇</li>
-            <li></li>
-          </ul>
-        </div>
+          I am a <strong>full-stack web developer</strong>. I was born and raised in Aichi, <strong>Japan🇯🇵</strong>
+          I'm always enthusiastic and also creative and love helping people by solving their problems.
+          <br>
+          <br>
+          After I graduated from university, I worked as an English teacher for three years, but I decided to make a career change to become a full-stack web developer
+          and joined in a coding bootcamp called <a href="https://www.lewagon.com/" style="text-decoration: none; color: black;", target="_blank"><strong>Le Wagon Tokyo🗼</strong></a>(9-week intensive coding program).
+          Teaching had its rewards, but I realized that I could help more people by using the power of technology.
+          <br>
+          <br>
+          Now, my goal is to become a programmer who can write code that empathetically caters to each user's needs. I'm excited about the possibilities ahead and
+          how technology can enable me to make a difference in people's lives on a larger scale💻
+        </p>
+      </div>
+      <br>
+      <br>
+      <div id="like">
+        <h3>What I like</h3>
+        <ul>
+          <li>Travelling🧳</li>
+          <li>Handball🤾‍♂️</li>
+          <li>Ramen🍜</li>
+          <li>Owarai(japanese comedy)🕺</li>
+          <li>Listening to music(especially J-Hip Hop)😎</li>
+          <li>Seeing lowest reviews on Google map📍</li>
+        </ul>
+      </div>
+      <br>
+      <div id="dislike">
+        <h3>What I don't like</h3>
+        <ul>
+          <li>Typos lurking somewhere in the code👨‍💻</li>
+          <li>Striking your little toe on the corner of a dresser😢</li>
+          <li>Earphone tangled in bag🩺</li>
+          <li>When the sticker on something you bought is impossible to remove😠</li>
+        </ul>
+      </div>
+      <br>
+      <div id="secret">
+        <h3>My secret</h3>
+        <p>If you want to know my secret, drag the space below</p>
+        <p style="color: #f4f4f4; font-size: 24px; border-bottom: 1px solid black" class="text-center"">I am a Japanese Ninja.</p>
       </div>
     </div>
   </div>
+</div>
 </div>
