--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -6,14 +6,18 @@
       <div class="text-2">Ritsuki Toshima</div>
       <div class="text-3">And I'm a <span class="typing"></span></div>
       <div class="classbox">
-        <a href="#">Hire me</a>
+        <a href="https://www.linkedin.com/in/ritsuki-toshima/", target="_blank">Hire me</a>
+      </div>
+      <div class="nav-bar topBotomBordersOut text-center">
+        <a href="#home">HOME <i class="fas fa-home"></i></a>
+        <a href="#about">ABOUT ME <i class="fas fa-info-circle"></i></a>
+        <a href="#projects">PROJECT <i class="fas fa-folder-open"></i></a>
+        <a href="#contact">CONTACT <i class="fas fa-envelope"></i></a>
+      </div>
+      <div class="d-flex" style="margin-left: 4em;">
+        <a href="cv/sample.pdf" download="cv/sample.pdf" class="cv me-5">Download CV</a>
+        <a href="cv/sample.pdf" download="cv/sample.pdf" class="職務経歴書">職務経歴書</a>
       </div>
     </div>
   </div>
 </section>
-<div class="row justify-content-center banner">
-  <div class="col-12 d-flex flex-column justify-content-center align-items-center h-100">
-    <%= image_tag 'profile.jpg', alt: "profile photo", class: 'profile-avatar' %>
-    <h1 class="title-main">Hi I'm Ritsuki a.k.a Ritsukin Skywalker</h1>
-  </div>
-</div>
