--- a/source/partials/social.html.erb
+++ b/source/partials/social.html.erb
@@ -2,7 +2,7 @@
   <div class="col-12">
     <div id="contact">
       <div class="social-container glare-style">
-        <h2>Contact</h2>
+        <h2><span class="typing-3"></span></h2>
         <ul class="social-icons">
           <li>
             <a href="https://www.facebook.com/profile.php?id=100012041112596" class="ic-facebook" , target="_blank">
@@ -25,7 +25,7 @@
             </a>
           </li>
           <li>
-            <a href="mailto:tanaka@gmail.com" class="ic-mail" target="_blank">
+            <a href="ricky0912t@gmail.com" class="ic-mail" target="_blank">
               <i class="fa-solid fa-envelope"></i>
             </a>
           </li>
@@ -36,37 +36,7 @@
 </div>
 <!-- footer section start -->
 <footer>
-  <div class="waves">
-    <div class="wave" id="wave1"></div>
-    <div class="wave" id="wave2"></div>
-    <div class="wave" id="wave3"></div>
-    <div class="wave" id="wave4"></div>
-  </div>
-  <h2><span class="typing-3"></span></h2>
-  <ul id="media">
-    <!-- facebook  -->
-    <li style="--clr:#0011ff;">
-      <a href="https://www.facebook.com/heemal.himalpun" target="-blank"><i class="fa-brands fa-facebook-f"></i>
-      </a>
-    </li>
-    <!-- youtube  -->
-    <li style="--clr:#ff0000;">
-      <a href="https://www.youtube.com/channel/UC1ryLxQzkWeFtply1F1kxwA " target="-blank"><i class="fa-brands fa-youtube"></i></a>
-    </li>
-    <!-- Twitter  -->
-    <li style="--clr:#4506f0;">
-      <a href="https://twitter.com/HimalPu94127169" target="-blank"><i class="fa-brands fa-twitter"></i></a>
-    </li>
-    <!-- Instagram  -->
-    <li style="--clr:#e73f0c;">
-      <a href="https://www.instagram.com/smokuspoon" target="-blank"><i class="fa-brands fa-instagram"></i></a>
-    </li>
-    <!-- whatsapp  -->
-    <li style="--clr:#04c214;">
-      <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-    </li>
-  </ul>
-  <p>&copy; 2023 <a href="https://hembdrpun.com.np/" target="_blank">Ristuki.com</a> | All Rights Reserved |</p>
+  <p>&copy; 2023 <a href="https://github.com/Ritsuki-Toshima" target="_blank">Ristuki.com</a> | All Rights Reserved |</p>
 </footer>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
