--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,6 +8,7 @@
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || "Portfolio" %></title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
@@ -23,7 +24,7 @@
       });
 
       var typed3 = new Typed(".typing-3", {
-      strings: ["Connect with me on :)"],
+      strings: ["Feel free to contact me :)"],
       typeSpeed: 100,
       backSpeed: 60,
       loop: true
