--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -1,3 +1,41 @@
 .banner {
   height: 100vh;
 }
+
+.cv {
+  display: inline-block;
+  /* background: crimson; */
+  color: crimson;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease-in-out;
+  text-decoration: none;
+}
+
+.職務経歴書 {
+  display: inline-block;
+  /* background: crimson; */
+  color: crimson;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease-in-out;
+  text-decoration: none;
+}
+
+.cv:hover {
+  color: white;
+  background: crimson;
+}
+
+.職務経歴書:hover {
+  color: white;
+  background: crimson;
+}
