--- a/source/stylesheets/components/_header.scss
+++ b/source/stylesheets/components/_header.scss
@@ -33,7 +33,7 @@ footer span {
 div.nav-bar {
   font-family: Raleway;
   margin: 0 auto;
-  padding: 10em 3em;
+  padding: 10em 3em 1em 3em;
   text-align: center;
 }
 
