--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -12,7 +12,7 @@
       <div class="parag">
         <div>
           <h2>About me</h2>
-          I am a <strong>full-stack web developer</strong>. I was born and raised in Aichi, <strong>Japan🇯🇵</strong>
+          I am a <strong>full-stack web developer💻</strong> I was born and raised in Aichi, <strong>Japan🇯🇵</strong>
           I'm always enthusiastic and also creative and love helping people by solving their problems.
           <br>
           <br>
@@ -22,7 +22,7 @@
           <br>
           <br>
           Now, my goal is to become a programmer who can write code that empathetically caters to each user's needs. I'm excited about the possibilities ahead and
-          how technology can enable me to make a difference in people's lives on a larger scale💻
+          how technology can enable me to make a difference in people's lives on a larger scale🌎
         </p>
       </div>
       <br>
@@ -52,7 +52,7 @@
       <div id="secret">
         <h3>My secret</h3>
         <p>If you want to know my secret, drag the space below</p>
-        <p style="color: #f4f4f4; font-size: 24px; border-bottom: 1px solid black" class="text-center"">I am a Japanese Ninja.</p>
+        <p style="color: #f4f4f4; font-size: 24px; border-bottom: 1px solid black" class="text-center"">I am a Japanese Ninja but wanna be Ironman</p>
       </div>
     </div>
   </div>
