--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -46,6 +46,7 @@
           <li>Striking your little toe on the corner of a dresser😢</li>
           <li>Earphone tangled in bag🩺</li>
           <li>When the sticker on something you bought is impossible to remove😠</li>
+          <li>yes</li>
         </ul>
       </div>
       <br>
