--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -14,10 +14,10 @@
         <a href="#projects">PROJECT <i class="fas fa-folder-open"></i></a>
         <a href="#contact">CONTACT <i class="fas fa-envelope"></i></a>
       </div>
-      <div class="d-flex" style="margin-left: 4em;">
-        <a href="cv/sample.pdf" download="cv/sample.pdf" class="cv me-5">Download CV</a>
-        <a href="cv/sample.pdf" download="cv/sample.pdf" class="職務経歴書">職務経歴書</a>
-      </div>
+      <%# <div class="d-flex" style="margin-left: 4em;">
+        <a href="cv/sample.pdf" download="pdf/Ritsuki_Toshima_cv.pdf" class="cv me-5">Download CV</a>
+        <a href="cv/sample.pdf" download="cv/sample.pdf" class="strength">Strength Finder</a>
+      </div> %>
     </div>
   </div>
 </section>
