--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -16,7 +16,7 @@
   text-decoration: none;
 }
 
-.職務経歴書 {
+.strength {
   display: inline-block;
   /* background: crimson; */
   color: crimson;
@@ -35,7 +35,7 @@
   background: crimson;
 }
 
-.職務経歴書:hover {
+.strength:hover {
   color: white;
   background: crimson;
 }
