--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -9,52 +9,103 @@
           </div>
         </div>
       </div>
-      <div class="parag">
-        <div>
-          <h2>About me</h2>
-          I am a <strong>full-stack web developer💻</strong> I was born and raised in Aichi, <strong>Japan🇯🇵</strong>
-          I'm always enthusiastic and also creative and love helping people by solving their problems.
+      <!-- English intro -->
+      <div id="about-english" class="language-content">
+        <div class="parag">
+          <div>
+            <h2>About me</h2>
+            I am a <strong>full-stack web developer💻</strong> I was born and raised in Aichi, <strong>Japan🇯🇵</strong>
+            I'm always enthusiastic and also creative and love helping people by solving their problems.
+            <br>
+            <br>
+            After I graduated from university, I worked as an English teacher for three years, but I decided to make a career change to become a full-stack web developer
+            and joined in a coding bootcamp called <a href="https://www.lewagon.com/" style="color: black;", target="_blank"><strong>Le Wagon Tokyo🗼</strong></a>(9-week intensive coding program).
+            Teaching had its rewards, but I realized that I could help more people by using the power of technology.
+            <br>
+            <br>
+            Now, my goal is to become a programmer who can write code that empathetically caters to each user's needs. I'm excited about the possibilities ahead and
+            how technology can enable me to make a difference in people's lives on a larger scale🌎
+          </div>
           <br>
           <br>
-          After I graduated from university, I worked as an English teacher for three years, but I decided to make a career change to become a full-stack web developer
-          and joined in a coding bootcamp called <a href="https://www.lewagon.com/" style="text-decoration: none; color: black;", target="_blank"><strong>Le Wagon Tokyo🗼</strong></a>(9-week intensive coding program).
-          Teaching had its rewards, but I realized that I could help more people by using the power of technology.
+          <div id="like">
+            <h3>What I like</h3>
+            <ul>
+              <li>Travelling🧳</li>
+              <li>Handball🤾‍♂️</li>
+              <li>Ramen🍜</li>
+              <li>Owarai(japanese comedy)🕺</li>
+              <li>Listening to music(especially J-Hip Hop)😎</li>
+              <li>Seeing lowest reviews on Google map📍</li>
+            </ul>
+          </div>
           <br>
+          <div id="dislike">
+            <h3>What I don't like</h3>
+            <ul>
+              <li>Typos lurking somewhere in the code👨‍💻</li>
+              <li>Striking your little toe on the corner of a dresser😢</li>
+              <li>Earphone tangled in bag🩺</li>
+              <li>When the sticker on something you bought is impossible to remove😠</li>
+            </ul>
+          </div>
           <br>
-          Now, my goal is to become a programmer who can write code that empathetically caters to each user's needs. I'm excited about the possibilities ahead and
-          how technology can enable me to make a difference in people's lives on a larger scale🌎
-        </p>
+          <div id="secret">
+            <h3>My secret</h3>
+            <p>If you want to know my secret, drag the space below</p>
+            <p style="color: #f4f4f4; font-size: 24px; border-bottom: 1px solid black" class="text-center"">I am a Japanese Ninja but wanna be Ironman</p>
+          </div>
+        </div>
       </div>
-      <br>
-      <br>
-      <div id="like">
-        <h3>What I like</h3>
-        <ul>
-          <li>Travelling🧳</li>
-          <li>Handball🤾‍♂️</li>
-          <li>Ramen🍜</li>
-          <li>Owarai(japanese comedy)🕺</li>
-          <li>Listening to music(especially J-Hip Hop)😎</li>
-          <li>Seeing lowest reviews on Google map📍</li>
-        </ul>
-      </div>
-      <br>
-      <div id="dislike">
-        <h3>What I don't like</h3>
-        <ul>
-          <li>Typos lurking somewhere in the code👨‍💻</li>
-          <li>Striking your little toe on the corner of a dresser😢</li>
-          <li>Earphone tangled in bag🩺</li>
-          <li>When the sticker on something you bought is impossible to remove😠</li>
-        </ul>
-      </div>
-      <br>
-      <div id="secret">
-        <h3>My secret</h3>
-        <p>If you want to know my secret, drag the space below</p>
-        <p style="color: #f4f4f4; font-size: 24px; border-bottom: 1px solid black" class="text-center"">I am a Japanese Ninja but wanna be Ironman</p>
+      <!-- Japanese intro -->
+      <div id="about-japanese" class="language-content" style="display: none;">
+        <div class="parag">
+          <div>
+            <h2>自己紹介</h2>
+            1997年愛知県生まれ。O型、乙女座、丑年。<br>
+            ハンドボールとラーメンが好き。ロック・リーのような漢になりたいです。
+            <br>
+            <br>
+            大学を卒業後、3年間英語教師として働きましたがIT業界へのキャリアチェンジを決意し、コーディングのブートキャンプである
+            <a href="https://www.lewagon.com/" style="color: black;", target="_blank"><strong>Le Wagon Tokyo🗼</strong></a>の
+            Web Developerコースに参加しました。教員の仕事は楽しく、やりがいがありましたが、自分の知らない世界のことをもっと知りたいという知的好奇心や、
+            テクノロジーの力を使ってより多くの人に価値を提供したいという思いからキャリアチェンジを決意しました。
+            <br>
+            <br>
+            現在の目標はITの知識とプログラミングを磨くこと！<br>
+            IT×教育で世の中に良い影響を与えられるようになりたいです🌎
+          </div>
+          <br>
+          <br>
+          <div id="like">
+            <h3>好きなもの</h3>
+            <ul>
+              <li>旅行🧳</li>
+              <li>ハンドボール🤾‍♂️</li>
+              <li>ラーメン巡り🍜</li>
+              <li>お笑い(特にM1が好きです)🕺</li>
+              <li>音楽鑑賞😎</li>
+              <li>Google mapで評価の低いレビューを眺める📍</li>
+            </ul>
+          </div>
+          <br>
+          <div id="dislike">
+            <h3>嫌いなもの</h3>
+            <ul>
+              <li>自分の書いたコードのどこかに潜んでいるタイピングミス👨‍💻</li>
+              <li>足の小指をタンスの角にぶつけること😢</li>
+              <li>リュックの中で勝手に絡まってるイヤホン🩺</li>
+              <li>100均で買った食器とかの裏についてるうまく剥がせないシール😠</li>
+            </ul>
+          </div>
+          <br>
+          <div id="secret">
+            <h3>私の秘密</h3>
+            <p>私の秘密が知りたければ下の空白の部分をドラッグしてみてください</p>
+            <p style="color: #f4f4f4; font-size: 24px; border-bottom: 1px solid black" class="text-center"">実はふわふわのパンケーキが好きです。</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </div>
