--- a/source/partials/navbar.html.erb
+++ b/source/partials/navbar.html.erb
@@ -21,6 +21,12 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
+        <div class="switch">
+          <input id="language-toggle" class="check-toggle check-toggle-round-flat" type="checkbox">
+          <label for="language-toggle"></label>
+          <span class="on">EN</span>
+          <span class="off">JP</span>
+        </div>
       </div>
     </div>
   </nav>
