--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,6 +16,7 @@
   <body>
     <%= yield %>
     <script>
+      // Animation for landing page
       var typed = new Typed(".typing", {
         strings: ["Full-stack web developer", "Ninja", "Dreamer", "Perfect human"],
         typeSpeed: 100,
@@ -23,11 +24,28 @@
         loop: true
       });
 
+      // Animation for contact page
       var typed3 = new Typed(".typing-3", {
       strings: ["Feel free to contact me :)"],
       typeSpeed: 100,
       backSpeed: 60,
       loop: true
+      });
+
+      // English & Japanese toggle
+      document.addEventListener("DOMContentLoaded", function () {
+      const languageToggle = document.getElementById("language-toggle");
+      const aboutEnglish = document.getElementById("about-english");
+      const aboutJapanese = document.getElementById("about-japanese");
+      languageToggle.addEventListener("change", function () {
+      if (languageToggle.checked) {
+      aboutEnglish.style.display = "none";
+      aboutJapanese.style.display = "block";
+      } else {
+      aboutEnglish.style.display = "block";
+      aboutJapanese.style.display = "none";
+      }
+      });
       });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
