--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -17,7 +17,7 @@
             <p class="feature-v6__description cd-margin-bottom-xs"><%= project.description %></p>
             <div class="d-flex link-btn">
               <p class="me-4"><a href="<%= project.url %>" class="cd-link btn", target="_blank">Website<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-              <p><a href="<%= project.guthub %>" class="cd-link btn", target="_blank">Github<i class="fa-brands fa-square-github"></i></a></p>
+              <p><a href="<%= project.github %>" class="cd-link btn", target="_blank">Github<i class="fa-brands fa-square-github"></i></a></p>
             </div>
           </div>
         <% end %>
