--- a/source/stylesheets/components/_projects.scss
+++ b/source/stylesheets/components/_projects.scss
@@ -61,6 +61,8 @@ Component
 
 .feature-v6__img {
   width: 100%;
+  height: 340px;
+  object-fit: cover;
   border-radius: 0.375em;
   margin-bottom: 1rem;
 }
