--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -14,10 +14,10 @@
         <a href="#projects">PROJECT <i class="fas fa-folder-open"></i></a>
         <a href="#contact">CONTACT <i class="fas fa-envelope"></i></a>
       </div>
-      <%# <div class="d-flex" style="margin-left: 4em;">
-        <a href="cv/sample.pdf" download="pdf/Ritsuki_Toshima_cv.pdf" class="cv me-5">Download CV</a>
-        <a href="cv/sample.pdf" download="cv/sample.pdf" class="strength">Strength Finder</a>
-      </div> %>
+      <div class="d-flex" style="margin-left: 4em;">
+        <a href="images/Ritsuki_Toshima_cv.pdf" download="Ritsuki Toshima CV" class="cv me-5">Download CV</a>
+        <a href="images/Strength_Finder.pdf" download="Ritsuki Toshima Strength Finder" class="strength">Strength Finder</a>
+      </div>
     </div>
   </div>
 </section>
