--- a/source/partials/social.html.erb
+++ b/source/partials/social.html.erb
@@ -20,6 +20,11 @@
             </a>
           </li>
           <li>
+            <a href="https://www.wantedly.com/id/ritsuki_toshima" class="ic-wantedly" , target="_blank">
+              <i class="fa-solid fa-w"></i>
+            </a>
+          </li>
+          <li>
             <a href="https://github.com/Ritsuki-Toshima" class="ic-github" , target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
