--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -69,7 +69,7 @@
             大学を卒業後、3年間英語教師として働きましたがIT業界へのキャリアチェンジを決意し、コーディングのブートキャンプである
             <a href="https://www.lewagon.com/" style="color: black;", target="_blank"><strong>Le Wagon Tokyo🗼</strong></a>の
             Web Developerコースに参加しました。教員の仕事は楽しく、やりがいがありましたが、自分の知らない世界のことをもっと知りたいという知的好奇心や、
-            テクノロジーの力を使ってより多くの人に価値を提供したいという思いからキャリアチェンジを決意しました。
+            テクノロジーの力を使ってより多くの人に価値を提供したいという思いから新たな世界に踏み出しました！
             <br>
             <br>
             現在の目標はITの知識とプログラミングを磨くこと！<br>
